--- a/01.html
+++ b/01.html
@@ -5,12 +5,96 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <a href="#"><img src="https://picsum.photos/200/50/?random=1"></a>
-    <nav>
-        <a href=""></a>
-    </nav>
-    <div class="wrap"></div>
+    <div class="header">
+        <a href="#" class="logo"><img src="https://picsum.photos/80/40/?random=1"></a>
+        <nav>
+            <a href="">關於我們</a>
+            <a href="">最新消息</a>
+            <a href="">產品</a>
+            <a href="">服務</a>
+            <a href="">聯絡我們</a>
+            <a href="">網站地圖</a>
+        </nav>
+    </div>
+
+    <div class="bannner">
+        <img src="https://picsum.photos/1800/300/?random=2">
+    </div>
+
+    <ul class="path">
+        <li><a href="">首頁</a></li>
+        <li><a href="">最新消息</a></li>
+        <li><a href="">首頁</a></li>
+    </ul>
+
+    <div class="about">
+            <h2>關於我們</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non labore sit ad earum magnam optio pariatur eius sapiente exercitationem atque.</p>
+        <div class="wrap">
+            <div class="item">
+                <img src="https://picsum.photos/50/50/?random=1">
+                <h3>title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi voluptates eum, aliquam illo suscipit placeat excepturi quisquam blanditiis error ea earum optio vero! Quasi in sequi adipisci hic ut laudantium.</p>
+            </div>
+            <div class="item">
+                <img src="https://picsum.photos/50/50/?random=1">
+                <h3>title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi voluptates eum, aliquam illo suscipit placeat excepturi quisquam blanditiis error ea earum optio vero! Quasi in sequi adipisci hic ut laudantium.</p>
+            </div>
+            <div class="item">
+                <img src="https://picsum.photos/50/50/?random=1">
+                <h3>title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi voluptates eum, aliquam illo suscipit placeat excepturi quisquam blanditiis error ea earum optio vero! Quasi in sequi adipisci hic ut laudantium.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="products">
+        <div class="wrap">
+            <div class="item pic">
+                <img src="https://picsum.photos/300/200/?random=10">
+            </div>
+            <div class="item text">
+                <h3>title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, laudantium! Consequuntur cum hic enim optio architecto aliquam nobis. Id maiores amet consequuntur quis maxime molestiae magnam consectetur cupiditate nemo sit.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="service">
+        <h2>服務項目</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, nam.</p>
+        <div class="wrap">
+            <div class="item">
+                <img src="https://picsum.photos/300/200/?random=20">
+                <h3>title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, sunt reprehenderit quo voluptatem omnis ex labore aperiam hic mollitia quia corrupti eligendi eum expedita voluptatibus modi error iure doloribus enim?</p>
+            </div>
+            <div class="item">
+                <img src="https://picsum.photos/300/200/?random=20">
+                <h3>title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, sunt reprehenderit quo voluptatem omnis ex labore aperiam hic mollitia quia corrupti eligendi eum expedita voluptatibus modi error iure doloribus enim?</p>
+            </div>
+            <div class="item">
+                <img src="https://picsum.photos/300/200/?random=20">
+                <h3>title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, sunt reprehenderit quo voluptatem omnis ex labore aperiam hic mollitia quia corrupti eligendi eum expedita voluptatibus modi error iure doloribus enim?</p>
+            </div>
+            <div class="item">
+                <img src="https://picsum.photos/300/200/?random=20">
+                <h3>title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, sunt reprehenderit quo voluptatem omnis ex labore aperiam hic mollitia quia corrupti eligendi eum expedita voluptatibus modi error iure doloribus enim?</p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        &copy; copyright 2021 by HansKu
+    </footer>
+
 </body>
 </html>
